--- a/.github/workflows/push_to_main.yml
+++ b/.github/workflows/push_to_main.yml
@@ -23,6 +23,16 @@ jobs:
     name: "dbt seed, run & test"
     runs-on: ubuntu-latest
 
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
     - name: 📬 Check out
       uses: actions/checkout@v4
@@ -36,4 +46,8 @@ jobs:
     - name: Upload documentation
       uses: actions/upload-pages-artifact@v3
       with:
-        path: target
+        path: ${{ github.workspace }}/target
+    
+     - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
