--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -20,7 +20,9 @@ jobs:
   dbt_seed_run_test:
     name: "dbt seed, run & test"
     runs-on: ubuntu-latest
-
+    permissions:
+      pages: write
+      id-token: write
     steps:
     - name: 📬 Check out
       uses: actions/checkout@v4
