Use original Maintain One Comment Action

--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -59,7 +59,7 @@ jobs:
         preview: true
 
     - name: ✅ maintain-comment
-      uses: ./.github/actions/maintain-one-comment
+      uses: actions-cool/maintain-one-comment@v3
       with:
         token: ${{  github.token }}
         body: |
