Use original Maintain One Comment Action

--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -24,6 +24,7 @@ jobs:
       pages: write
       id-token: write
       issues: write
+      pull-requests: write
 
     steps:
     - name: 📬 Check out
